(Format: Year/Month/Day)
Changes for 0.9.10:
*04/06/20:
  * Clean out old nls stuff. Move in those strings that 
    are still in the new names, new Makefiles, etc (Simon)
    - need to get script to help people translate
    nls/*/Makefile.am nls/*/Translation.m  -nls/*/*.m    
  * Fix various systray issues (Simon)
    SystemTray.cc Toolbar.cc ToolbarItem.hh
  * Support _NET_WM_WINDOW_TYPE_DESKTOP (Simon)
    - eg nautilus desktop windows are on the bottom, not tabable, etc
    Ewmh.hh/cc Window.hh/cc
  * Fix honouring of initial state on window open (Simon)
    Window.hh/cc Screen.cc
*04/06/18:
  * background xmessage in fbsetbg so it doesn't block anything
    also set the "okay" button to default so you can just press enter
    (Simon)
    fbsetbg
*04/06/17:
  * Improve rendering speed of toolbar (Simon)
    - remove many redundant renders (esp. startup)
    - only update clock if the text has changed
    - fix transparency and border on most items
    IconbarTool.hh/cc IconButton.cc Toolbar.cc Container.cc
    ClockTool.cc WorkspaceNameTool.cc
*04/06/14:
  * More menu transparency improvements (Henrik)
    Menu.cc
*04/06/13:
  * More menu transparency improvements (Henrik)
    Menu.hh/cc, MenuTheme.hh
*04/06/12:
  * Updated japanese locales from Yasuhiro Takabayashi
    <kourin at momonga-linux dot org>
    fluxbox-generate_menu.in
*04/06/10:
  * Fixed icon in menu and improved menu loading speed (Henrik)
    New option for menu file:
    [key] (label) {argument to key} <the icon filename>
    example:
    [exec] (aterm) {aterm} <terminal.xpm>
    MenuItem.cc/hh, FbMenuParser.hh/cc, MenuCreator.cc
*04/06/08:
  * Fix up bsetroot nls, and couple of other tweaks (Simon)
    util/Makefile.am bsetroot.cc nls/Makefile.am fluxbox-nls.hh nlsinfo 
    MenuCreator.cc WorkspaceMenu.cc
  * Some man page license updates c/- Han
    fluxbox.1.in bsetroot.1 startfluxbox.1
*04/06/07:
  * New menu theme items:
    menu.titleHeight: integer
    menu.itemHeight: integer